--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@ant-design/icons": "^5.0.1",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-material/core": "^1.3.7",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "antd": "^5.3.3",
     "expo": "~48.0.9",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-input-outline": "^1.5.2",
+    "react-native-navigation-container": "^1.0.6",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-select-dropdown": "^3.3.2",
     "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
