--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@expo/vector-icons": "^13.0.0",
+    "@freakycoder/animated-tabbar": "^3.0.0",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native-stack": "^6.9.12",
@@ -19,7 +20,7 @@
     "expo": "~48.0.9",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
-    "lottie-react-native": "^5.1.5",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
