--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@freakycoder/animated-tabbar": "^3.0.0",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "antd": "^5.3.3",
@@ -21,18 +22,23 @@
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "lottie-react-native": "5.1.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-heroicons": "^3.2.0",
     "react-native-input-outline": "^1.5.2",
     "react-native-navigation-container": "^1.0.6",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.2",
-    "react-native-svg": "^13.4.0"
+    "react-native-svg": "^13.4.0",
+    "react-native-tailwindcss": "^1.1.11",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.1"
   },
   "private": true
 }
