--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~48.0.9",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "fluidbottomnavigation-rn": "^0.1.1",
     "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -34,6 +35,7 @@
     "react-native-select-dropdown": "^3.3.2",
     "react-native-svg": "^13.4.0",
     "react-native-tailwindcss": "^1.1.11",
+    "react-native-view-overflow": "^0.0.5",
     "tailwind-react-native-classnames": "^1.5.1",
     "tailwindcss-react-native": "^1.7.10"
   },
