--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "antd": "^5.3.3",
-    "axios": "^1.3.5",
+    "axios": "^1.3.6",
     "expo": "~48.0.9",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -26,7 +26,8 @@
     "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-input-outline": "^1.5.2",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.4.0",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-view-overflow": "^0.0.5",
