sudah saya perbaiki bagian tabbar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "dalam",
         "FTTH",
         "hiasan",
+        "Ionicons",
         "jaringan",
         "kamu",
         "menggunakan",
