--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-input-outline": "^1.5.2",
     "react-native-navigation-container": "^1.0.6",
+    "react-native-otp-textinput": "^1.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.2",
