--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "apartemen",
         "batas",
+        "customerservice",
         "dalam",
         "FTTH",
         "hiasan",
@@ -16,6 +17,7 @@
         "rumah",
         "sampai",
         "sebagai",
+        "shoppingcart",
         "tambahan",
         "tanpa",
         "teknologi",
