--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@expo/vector-icons": "^13.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@freakycoder/animated-tabbar": "^3.0.0",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -39,6 +41,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.4.0",
     "react-native-tailwindcss": "^1.1.11",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-view-overflow": "^0.0.5",
     "tailwind-react-native-classnames": "^1.5.1",
     "tailwindcss-react-native": "^1.7.10"
