ngerapihin dikit product screen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "andal",
         "apartemen",
         "batas",
         "customerservice",
@@ -10,9 +11,11 @@
         "jaringan",
         "kamu",
         "menggunakan",
+        "Nusa",
         "optik",
         "paket",
         "penggunaan",
+        "penyelamatan",
         "pilihan",
         "rumah",
         "sampai",
