--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.3.16",
     "antd": "^5.3.3",
     "axios": "^1.3.6",
+    "eslint": "^8.40.0",
     "expo": "~48.0.9",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
