penyelesaian floating button dan profile screen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "penggunaan",
         "penyelamatan",
         "pilihan",
+        "Putra",
         "rumah",
         "sampai",
         "sebagai",
