--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-hyperlink": "^0.0.22",
     "react-native-input-outline": "^1.5.2",
     "react-native-navigation-container": "^1.0.6",
     "react-native-otp-textinput": "^1.0.1",
