--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd": "^5.3.3",
     "axios": "^1.3.6",
     "eslint": "^8.40.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~48.0.9",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -38,6 +39,7 @@
     "react-native-input-outline": "^1.5.2",
     "react-native-navigation-container": "^1.0.6",
     "react-native-otp-textinput": "^1.0.1",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.2",
