--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "expo-status-bar": "~1.4.4",
     "fluidbottomnavigation-rn": "^0.1.1",
     "lottie-react-native": "5.1.4",
+    "moti": "^0.25.3",
     "nativewind": "^2.0.11",
+    "randomcolor": "^0.6.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-elements": "^3.4.3",
@@ -40,12 +42,14 @@
     "react-native-input-outline": "^1.5.2",
     "react-native-navigation-container": "^1.0.6",
     "react-native-otp-textinput": "^1.0.1",
+    "react-native-pager-view": "6.1.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.2",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^13.4.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-vector-icons": "^9.2.0",
     "react-native-view-overflow": "^0.0.5",
