--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "expo-status-bar": "~1.4.4",
     "fluidbottomnavigation-rn": "^0.1.1",
     "lottie-react-native": "5.1.4",
+    "moti": "^0.25.3",
     "nativewind": "^2.0.11",
+    "randomcolor": "^0.6.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-elements": "^3.4.3",
