--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,14 @@ npm-debug.*
 *.orig.*
 web-build/
 node_modules
+yarn.lock
+package.json
+package-lock.json
+tailwind.config.js
+yarn-error.log
+app.json
+package-lock.json
+
 # macOS
 .DS_Store
 
