menambahkan page payment status

--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "react-native-tailwindcss": "^1.1.11",
     "react-native-vector-icons": "^9.2.0",
     "react-native-view-overflow": "^0.0.5",
+    "react-redirect": "^1.0.0",
+    "react-router-dom": "^6.12.1",
     "tailwind-react-native-classnames": "^1.5.1",
     "tailwindcss-react-native": "^1.7.10"
   },
