--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "fluidbottomnavigation-rn": "^0.1.1",
+    "html-react-parser": "^4.0.0",
     "lottie-react-native": "5.1.4",
     "moti": "^0.25.3",
     "nativewind": "^2.0.11",
@@ -55,6 +56,7 @@
     "react-native-view-overflow": "^0.0.5",
     "react-redirect": "^1.0.0",
     "react-router-dom": "^6.12.1",
+    "socket.io-client": "^4.6.2",
     "tailwind-react-native-classnames": "^1.5.1",
     "tailwindcss-react-native": "^1.7.10"
   },
