--- a/mobile/package.json
+++ b/mobile/package.json
@@ -45,6 +45,7 @@
     "react-native-otp-textinput": "^1.0.1",
     "react-native-pager-view": "6.1.2",
     "react-native-reanimated": "~2.14.4",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.2",
